Made changes to the swagger doc
